tests/field/get_on_string.out
[31merror[error]: 'str' object has no attribute 'foo'
----- Traceback -----
  ┌─ <unknown>:1:9
  | 
1 | "str".foo
  |          ^
[0m